feat: method area GC & static field
- GC FullGC
  - 常量池中废弃的常量
  - 不再使用的类型（类或接口）
- 静态变量存放位置
  - new的实例对象都在heap
  - 引用三种
    - 方法内的局部变量，在栈帧的局部变量表
    - 非静态变量，在heap中
    - 静态变量，在java.lang.Class实例对象下，CLass对象在heap中，所以静态变量也在heap中